# spin-wasm-multi-compute

./: LOCAL_DEVELOPMENT.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/skills/tdg/scripts/: tdg_phase.sh
backend/compute/: infrastructure.py
backend/compute/runtime/: Dockerfile
k8s/: Dockerfile.local  app.py  cdk8s.yaml  spin.toml
k8s/static/: index.html
scripts/: install-deps.sh  run-tests.sh
