[project]
name = "spin-wasm-multi-compute"
version = "2.0.0"
description = "WebAssembly code running on different infrastructure compute primitives using Spin"
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.235.0",
    "constructs>=10.0.0,<11.0.0",
    # cdk8s for local Kubernetes deployment
    "cdk8s>=2.70.0,<3.0.0",
    "cdk8s-plus-30>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "radon>=6.0.0",
    "safety>=3.0.0",
    "xenon>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is an IaC project, not a distributable package
[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pylint.messages_control]
max-line-length = 100
